re PR fortran/50163 (ICE: initialization expression)

2011-08-25  Tobias Burnus  <burnus@net-b.de>

        PR fortran/50163
        * check_init_expr (check_init_expr): Return when an error
        occured.

2011-08-25  Tobias Burnus  <burnus@net-b.de>

        PR fortran/50163
        * gfortran.dg/initialization_28.f90: New.

From-SVN: r178054